[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]


[project]
name = "exptrk"
authors = [
    {name = "Leonard Becker", email = "thepythoncoder01@gmail.com"},
]
description = "Application to keep track of expenses"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["python", "expenses", "tracker", "gui"]
license = {text = "MIT"}
dependencies = ["PyQt5", "matplotlib", "numpy", "PyQtChart"]
dynamic = ["version"]

[tool.setuptools]
packages=["exptrk"]