[metadata]
name = exptrk
version = 3.2.2
author = Leonard Becker
author_email = thepythoncoder01@gmail.com
url = https://github.com/Jolumine/exptrk
description = Package containing the expense tracker app 
long_description = file: README.md
long_description_content_type = text/markdown 
keywords = Expense, Tracker, Money, Python, github
license = MIT 

[options]
packages = find: 
zip_safe = True
include_package_data = True 

install_requires = 
PyQt5==5.15.7
PyQtChart==5.15.6
matplotlib==3.6.3
requests==2.28.2

[options.entry_points]
console_scripts = my-example-utility = exptrk:main
